border colors of transactions for dark mode has been change to #B6CEFC80. issue solved (#308)

--- a/client/src/styles/ExpenseTracker.css
+++ b/client/src/styles/ExpenseTracker.css
@@ -103,7 +103,7 @@
   box-sizing: border-box;
   height: 70px;
   position: relative;
-  border-color: var(--border);
+  /* border-color: var(--border); */
 }
 
 .income::after {
